# RaftDB

./: .gitignore  CMakeLists.txt  README.md
include/: client_handler.h  client_interface.h  entry.h  log.h  network_layer.h  raft_cluster.h  raft_node.h  state_machine.h  system_interface.h
proto/: client.proto  raft.proto
src/: client_handler.cpp  client_interface.cpp  entry.cpp  log.cpp  main.cpp  network_layer.cpp  raft_cluster.cpp  raft_node.cpp  state_machine.cpp  system_interface.cpp
